--- a/frontend/information retrieval project 2/src/styles/base.module.css
+++ b/frontend/information retrieval project 2/src/styles/base.module.css
@@ -40,3 +40,104 @@
   --border-radius-md: 7px;
   --border-radius-lg: 9px;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  transition: background-color 0.2s;
+}
+
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+
+  transition: color 0.3s, background-color 0.3s;
+  line-height: 1.5;
+  font-size: 1.6rem;
+}
+
+body::-webkit-scrollbar {
+  width: 4px;
+  height: 2px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--color-primary-shade-2);
+  border-radius: 5px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #333;
+  border-radius: 50px;
+}
+
+* {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  &:focus {
+    outline: none !important;
+  }
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+  color: inherit;
+}
+
+button {
+  cursor: pointer;
+}
+
+*:disabled {
+  cursor: not-allowed;
+}
+
+input:focus,
+button:focus,
+textarea:focus,
+select:focus {
+  outline-offset: -1px;
+}
+
+button:has(svg) {
+  line-height: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+  hyphens: auto;
+}
+
+img {
+  max-width: 100%;
+}
