--- a/frontend/information retrieval project 2/src/styles/base.module.css
+++ b/frontend/information retrieval project 2/src/styles/base.module.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Rajdhani:wght@300;400;500;600;700&display=swap");
+
 :root {
   --color-primary: #42d392;
   --color-primary-shade-1: #02d878;
@@ -63,7 +65,8 @@ html {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: "Rajdhani", serif !important;
 
   transition: color 0.3s, background-color 0.3s;
   line-height: 1.5;
