--- a/frontend/information retrieval project 2/src/styles/dashboard.module.css
+++ b/frontend/information retrieval project 2/src/styles/dashboard.module.css
@@ -12,6 +12,7 @@
   border-radius: var(--border-radius-md);
   border: 1px solid var(--color-grey-5);
   padding: 1rem;
+  max-height: max-content;
 }
 .sidebar-container .nav-btn {
   padding: 1rem;
