--- a/frontend/information retrieval project 2/src/styles/add-website.module.css
+++ b/frontend/information retrieval project 2/src/styles/add-website.module.css
@@ -1,15 +1,16 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
   margin-top: 4rem;
   width: 35%;
+  & h1 {
+    margin-bottom: 5rem;
+  }
 }
 .form {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-
   & button {
     margin-top: 4rem;
     display: flex;
