--- a/frontend/information retrieval project 2/src/styles/base.module.css
+++ b/frontend/information retrieval project 2/src/styles/base.module.css
@@ -30,7 +30,7 @@
   --shadow-md: 0 0 2.4rem rgba(0, 0, 0, 0.1);
   --shadow-lg: 0 0 3.2rem rgba(0, 0, 0, 0.15);
 
-  --shadow-me-sm: 0 0 3rem rgba(0, 0, 0, 0.05);
+  --shadow-me-sm: 0 5px 1rem rgba(0, 0, 0, 0.05);
   --shadow-me-md: 0 0 2.4rem rgba(0, 0, 0, 0.2);
   --shadow-me-lg: 0 0 1rem rgba(0, 0, 0, 0.3);
 
