--- a/frontend/information retrieval project 2/src/styles/header.module.css
+++ b/frontend/information retrieval project 2/src/styles/header.module.css
@@ -21,6 +21,16 @@
 }
 .left {
   gap: 3.8rem;
+  & .logo {
+    margin-left: 1rem;
+    font-size: 3rem;
+    font-weight: bold;
+    display: flex;
+    & img {
+      width: 50px;
+      height: 40px;
+    }
+  }
 }
 .nav-container {
   display: flex;
@@ -210,6 +220,13 @@
   }
 }
 @media (max-width: 450px) {
+  .logo {
+    font-size: 2.6rem !important;
+    & img {
+      width: 40px !important;
+      height: 30px !important;
+    }
+  }
   .profile-container {
     width: 3.6rem;
     height: 3.6rem;
