--- a/frontend/information retrieval project 2/src/styles/hero.module.css
+++ b/frontend/information retrieval project 2/src/styles/hero.module.css
@@ -13,3 +13,24 @@
   align-items: flex-start;
   gap: 5rem;
 }
+
+@media (max-width: 630px) {
+  .container h1 {
+    width: 100%;
+    font-size: 2rem;
+  }
+  .svg-container {
+    flex-direction: column;
+    align-items: center;
+    & svg {
+      width: 50%;
+    }
+  }
+}
+@media (max-width: 400px) {
+  .svg-container {
+    & svg {
+      width: 80%;
+    }
+  }
+}
