--- a/frontend/information retrieval project 2/src/styles/login-form.module.css
+++ b/frontend/information retrieval project 2/src/styles/login-form.module.css
@@ -44,3 +44,32 @@
 .container .submit-container button {
   width: 100%;
 }
+
+@media (max-width: 1250px) {
+  .container {
+    width: 40%;
+  }
+}
+@media (max-width: 1100px) {
+  .container {
+    width: 50%;
+    height: 80%;
+  }
+}
+@media (max-width: 850px) {
+  .container {
+    width: 70%;
+    height: 100%;
+  }
+}
+@media (max-width: 850px) {
+  .container {
+    width: 100%;
+  }
+}
+@media (max-width: 450px) {
+  .container .fields-container > div {
+    width: 100%;
+    gap: 0;
+  }
+}
