--- a/frontend/information retrieval project 2/src/styles/principles.module.css
+++ b/frontend/information retrieval project 2/src/styles/principles.module.css
@@ -54,3 +54,67 @@
   font-weight: 500;
   color: var(--color-grey-3);
 }
+
+@media (max-width: 1100px) {
+  .container {
+    width: 100%;
+  }
+}
+
+@media (max-width: 850px) {
+  .container {
+    width: 90%;
+  }
+}
+@media (max-width: 750px) {
+  .container .features-container .feature-container {
+    align-items: center;
+    height: auto;
+
+    & .svg-container {
+      justify-content: center;
+      align-self: center;
+    }
+  }
+  .container .features-container > div:nth-child(even) {
+    flex-direction: column-reverse;
+  }
+  .container .features-container > div:nth-child(odd) {
+    flex-direction: column;
+  }
+}
+@media (max-width: 600px) {
+  .container {
+    width: 95%;
+    & header h1 {
+      font-size: 2.8rem;
+      text-align: center;
+    }
+    & header .description-container {
+      width: 100%;
+
+      & p {
+        font-size: 1.6rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .container {
+    width: 95%;
+    & header h1 {
+      font-size: 2.8rem;
+      text-align: center;
+    }
+    & .description-container {
+      & p {
+        font-size: 1.4rem;
+        text-align: center;
+      }
+    }
+    & .features-container .feature-container .svg-container {
+      width: 80%;
+    }
+  }
+}
