--- a/frontend/information retrieval project 2/src/styles/base.module.css
+++ b/frontend/information retrieval project 2/src/styles/base.module.css
@@ -42,6 +42,10 @@
   --border-radius-md: 7px;
   --border-radius-lg: 9px;
 
+  --color-input-light: #f7f7f7;
+  --color-input-dark: #4c4c4c;
+  --color-input: #f7f7f7;
+
   --gradient-horizontal-footer: linear-gradient(
     to right,
     var(--color-primary),
