--- a/frontend/information retrieval project 2/src/styles/dashboard.module.css
+++ b/frontend/information retrieval project 2/src/styles/dashboard.module.css
@@ -13,6 +13,7 @@
   border: 1px solid var(--color-grey-5);
   padding: 1rem;
   max-height: max-content;
+  color: var(--color-grey-3);
 }
 .sidebar-container .nav-btn {
   padding: 1rem;
