--- a/frontend/information retrieval project 2/src/styles/footer.module.css
+++ b/frontend/information retrieval project 2/src/styles/footer.module.css
@@ -33,7 +33,6 @@
 }
 .content > div {
   width: 25%;
-  /* padding: 0 2rem; */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -58,6 +57,9 @@
     }
   }
 }
+.content .company h1 {
+  color: var(--color-grey-3);
+}
 .content .company > p {
   font-size: 1.4rem;
   color: var(--color-grey-4);
@@ -73,6 +75,7 @@
 }
 .content .links .link-container a {
   transition: all 0.2s;
+  color: var(--color-grey-3);
 }
 .content .links .link-container a:hover {
   text-decoration: underline;
@@ -82,6 +85,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.8rem;
+  width: 100%;
   & > p {
     color: var(--color-grey-3);
   }
@@ -98,7 +102,7 @@
   display: flex;
   justify-content: center;
   transition: all 0.2s;
-  width: 80%;
+  width: 60%;
   color: #fff;
 }
 .content .get-started .get-started-container .subscrib-nav:hover {
