--- a/frontend/information retrieval project 2/src/styles/header.module.css
+++ b/frontend/information retrieval project 2/src/styles/header.module.css
@@ -21,11 +21,13 @@
 }
 .left {
   gap: 3.8rem;
+
   & .logo {
     margin-left: 1rem;
     font-size: 3rem;
     font-weight: bold;
     display: flex;
+    color: var(--color-grey-3);
     & img {
       width: 50px;
       height: 40px;
@@ -222,6 +224,7 @@
 @media (max-width: 450px) {
   .logo {
     font-size: 2.6rem !important;
+
     & img {
       width: 40px !important;
       height: 30px !important;
