--- a/frontend/information retrieval project 2/src/styles/pricing.module.css
+++ b/frontend/information retrieval project 2/src/styles/pricing.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   gap: 4rem;
   width: 80%;
+  color: var(--color-grey-3);
 }
 .container header {
   display: flex;
@@ -50,7 +51,7 @@
 .feature-container .description-container p {
   font-size: 1.6rem;
   font-weight: 500;
-  color: var(--color-grey-3);
+  /* color: var(--color-grey-3); */
 }
 
 @media (max-width: 1100px) {
